# table-extractor

./: CHANGELOG.md  COMPLETIONS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  security.yml
src/: detector.rs  error.rs  lib.rs  main.rs
src/parser/: csv.rs  markdown.rs  mod.rs  mysql.rs  postgres.rs
src/writer/: csv.rs  mod.rs  tsv.rs
tests/: edge_cases.rs  integration_test.rs
tests/fixtures/: csv_edge_cases.txt  markdown_edge_cases.txt  markdown_simple.txt  markdown_unicode.txt  mysql_unicode.txt  postgres_unicode.txt  tsv_unicode.txt
