[package]
name = "table-extractor"
version = "0.1.0"
edition = "2021"
authors = ["Agustin Camino"]
description = "A command-line tool to convert various tabular data formats (Markdown, MySQL, PostgreSQL, CSV, TSV) into TSV or CSV for easy spreadsheet pasting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/acamino/table-extractor"
keywords = ["cli", "table", "csv", "tsv", "converter"]
categories = ["command-line-utilities"]

[[bin]]
name = "tabx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
